force-app/main/default/objects/CONTRACT__c/CONTRACT__c.object-meta.xml
<CustomObject>
    <label>Contract</label>
    <nameField>
        <label>CONTRACT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>