force-app/main/default/objects/CONTRACT__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <displayFormat>C-{0000}</displayFormat>
    <label>Contract Name</label>
    <type>AutoNumber</type>
</CustomField>