force-app/main/default/objects/CONTRACT__c/fields/Signed_By_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signed By Candidate</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>